# CI-projekt

./: .coverage  coverage.xml  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
src/ci_projekt/: __init__.py
tests/: test_main.py
tests/ci_projekt/: test_init.py
